[gd_scene load_steps=6 format=3 uid="uid://c8obipsh0dhfb"]

[ext_resource type="Texture2D" uid="uid://bmauia8uhouyn" path="res://ui/texturas/transparentLight02.png" id="1_qc666"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="1_u070h"]
[ext_resource type="Texture2D" uid="uid://hi2usndrh3ff" path="res://ui/texturas/lineDark49.png" id="2_f3o4a"]
[ext_resource type="Texture2D" uid="uid://ffftpf7bcdtp" path="res://ui/texturas/transparentLight46.png" id="3_tjfaj"]
[ext_resource type="Texture2D" uid="uid://bfc6cus22k2l4" path="res://ui/texturas/transparentDark46.png" id="4_ly6q0"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_u070h")

[node name="btnAtirar" type="TextureButton" parent="."]
offset_left = 463.0
offset_top = 90.0
offset_right = 543.0
offset_bottom = 172.0
scale = Vector2(3, 3)
toggle_mode = true
texture_normal = ExtResource("3_tjfaj")
texture_pressed = ExtResource("4_ly6q0")

[node name="btnMover" type="TextureButton" parent="."]
offset_left = 116.0
offset_top = 90.0
offset_right = 241.0
offset_bottom = 215.0
scale = Vector2(2, 2)
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("1_qc666")
texture_pressed = ExtResource("2_f3o4a")

[connection signal="toggled" from="btnAtirar" to="." method="_on_btn_atirar_toggled"]
[connection signal="toggled" from="btnMover" to="." method="_on_btn_mover_toggled"]
